--- a/woof-distro/x86_64/debian/bullseye64/_00build.conf
+++ b/woof-distro/x86_64/debian/bullseye64/_00build.conf
@@ -134,7 +134,7 @@ mv -f root/.spot-status.orig root/.spot-status
 mv root/Downloads home/spot/
 chroot . chown -R spot:spot /home/spot/Downloads
 ln -s ../home/spot/Downloads root/
-rm -f usr/share/applications/pupX-X-settings.desktop usr/share/applications/Mouse-keyboard-Wizard.desktop usr/share/applications/Xorg-Video-Wizard.desktop usr/share/applications/BootManager-configure-bootup.desktop usr/share/applications/wallpaper.desktop usr/share/applications/FontManager.desktop usr/share/applications/Set-date-and-time.desktop usr/share/applications/Set-timezone.desktop
+rm -f usr/share/applications/pupX-X-settings.desktop usr/share/applications/Mouse-keyboard-Wizard.desktop usr/share/applications/Xorg-Video-Wizard.desktop usr/share/applications/BootManager-configure-bootup.desktop usr/share/applications/wallpaper.desktop usr/share/applications/FontManager.desktop usr/share/applications/Set-date-and-time.desktop usr/share/applications/Set-timezone.desktop usr/share/applications/ptheme.desktop
 for i in usr/share/themes/*; do case \"\$i\" in usr/share/themes/Flat-grey-rounded|usr/share/themes/Polished-Blue|usr/share/themes/Gradient-grey) ;; *) rm -vrf \"\$i\" ;; esac; done
 for i in usr/share/ptheme/globals/*; do case \"\$i\" in \"usr/share/ptheme/globals/Dark Gray\"|usr/share/ptheme/globals/431|usr/share/ptheme/globals/412) ;; *) rm -vf \"\$i\" ;; esac; done
 rm -vf usr/share/backgrounds/*.jpg
