--- a/woof-code/rootfs-petbuilds/cage/root/.Xwaylandrc
+++ b/woof-code/rootfs-petbuilds/cage/root/.Xwaylandrc
@@ -10,4 +10,5 @@ LIBINPUT_DEFAULT_CLICK_METHOD=
 LIBINPUT_DEFAULT_DRAG=
 LIBINPUT_DEFAULT_DISABLE_WHILE_TYPING=
 LIBINPUT_DEFAULT_MIDDLE_EMULATION=
+LIBINPUT_DEFAULT_LEFT_HANDED=
 XWAYLAND_SCREENSAVER_DELAY=600
