--- a/woof-distro/x86_64/debian/sid64/_00build.conf
+++ b/woof-distro/x86_64/debian/sid64/_00build.conf
@@ -41,7 +41,7 @@ DEVX_IN_ISO=no
 USR_SYMLINKS=yes
 
 ## packages to build from source
-PETBUILDS="busybox aaa_pup_c disktype dmz-cursor-theme geany gexec gpicview gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gxmessage l3afpad libicudata_stub lxtask lxterminal mtpaint rxvt-unicode transmission xarchiver xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons ram-saver labwc xdg-puppy-labwc pcmanfm pupmoon-font yambar connman-gtk fixmenusd"
+PETBUILDS="busybox aaa_pup_c disktype dmz-cursor-theme geany gexec gpicview gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gxmessage l3afpad libicudata_stub lxtask lxterminal mtpaint transmission xarchiver xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons ram-saver labwc xdg-puppy-labwc pcmanfm pupmoon-font yambar connman-gtk fixmenusd"
 
 ## GTK+ version to use when building packages that support GTK+ 2
 PETBUILD_GTK=3
