add rsync to CI (fixes #2828)

--- a/.github/workflows/kernel-kit.yml
+++ b/.github/workflows/kernel-kit.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Install dependencies
         run: |
           apt-get update -qq
-          apt-get install -y --no-install-recommends curl wget ca-certificates git squashfs-tools xz-utils diffutils patch make flex bison python3 bc bzip2 kmod libelf-dev libssl-dev dwarves gcc ${{ matrix.deps }}
+          apt-get install -y --no-install-recommends curl wget ca-certificates git squashfs-tools xz-utils diffutils patch make flex bison python3 bc bzip2 kmod rsync libelf-dev libssl-dev dwarves gcc ${{ matrix.deps }}
           curl https://raw.githubusercontent.com/puppylinux-woof-CE/initrd_progs/master/pkg/w_apps_static/w_apps/vercmp.c | gcc -x c -o /usr/local/bin/vercmp -
       - name: Build kernel
         run: |
