add /usr merge compatible kernel packages

--- a/.github/workflows/kernel-kit.yml
+++ b/.github/workflows/kernel-kit.yml
@@ -69,3 +69,41 @@ jobs:
           name: kernel-kit-output-${{ matrix.kernel-kit-config }}
           path: kernel-kit/small-output
           retention-days: 14
+  usrmerge:
+    if: github.event_name != 'schedule' || (github.repository == 'puppylinux-woof-CE/woof-CE' && github.ref == 'refs/heads/testing')
+    needs: build
+    runs-on: ubuntu-20.04
+    container:
+      image: ${{ matrix.image }}
+    strategy:
+      matrix:
+        include:
+          - kernel-kit-config: 5.10.x-x86
+            image: debian:bullseye-slim
+          - kernel-kit-config: 5.10.x-x86_64
+            image: debian:bullseye-slim
+          - kernel-kit-config: 5.15.x-x86
+            image: debian:bullseye-slim
+          - kernel-kit-config: 5.15.x-x86_64
+            image: debian:bullseye-slim
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          apt-get update -qq
+          apt-get install -y --no-install-recommends squashfs-tools bzip2
+      - name: Get build output
+        uses: actions/download-artifact@v2
+        with:
+          name: kernel-kit-output-${{ matrix.kernel-kit-config }}
+          path: kernel-kit/output
+      - name: Repackage kernel
+        run: |
+          cd kernel-kit
+          ./usrmerge.sh
+      - name: Upload kernel
+        uses: actions/upload-artifact@v2
+        with:
+          name: kernel-kit-output-usrmerge-${{ matrix.kernel-kit-config }}
+          path: kernel-kit/output
+          retention-days: 14
