--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,16 @@ jobs:
       run: |
         cd ../woof-out_*
         echo | sudo -E ./2createpackages
+    - name: Choose kernel variant
+      id: choose_kernel_variant
+      run: |
+        cd ../woof-out_*
+        . _00build.conf
+        [ ! -e _00build_2.conf ] || . _00build_2.conf
+        name="kernel-kit-output-usrmerge-${{ github.event.inputs.kernel }}.x-${{ github.event.inputs.arch }}"
+        [ "$USR_SYMLINKS" = yes ] || name="kernel-kit-output-${{ github.event.inputs.kernel }}.x-${{ github.event.inputs.arch }}"
+        echo "::set-output name=artifact_name::$name"
+      shell: bash
     - name: Get cached kernel-kit output
       uses: dawidd6/action-download-artifact@v2
       with:
@@ -84,7 +94,7 @@ jobs:
         branch: testing
         workflow: kernel-kit.yml
         workflow_conclusion: success
-        name: kernel-kit-output-${{ github.event.inputs.kernel }}.x-${{ github.event.inputs.arch }}
+        name: ${{ steps.choose_kernel_variant.outputs.artifact_name }}
         path: output
     - name: Move cached kernel-kit output
       run: sudo mv output ../woof-out_*/kernel-kit/
