add a tiny kernel sources SFS for building out-of-tree drivers

--- a/.github/workflows/kernel-kit.yml
+++ b/.github/workflows/kernel-kit.yml
@@ -60,9 +60,9 @@ jobs:
         run: |
           cd kernel-kit
           cp -f ${{ matrix.kernel-kit-config }}-build.conf build.conf
-          ./build.sh
+          CREATE_KBUILD_SFS=yes ./build.sh
           mkdir small-output
-          mv `ls output/kernel_sources-*.sfs* output/*.tar* 2>/dev/null` small-output
+          mv `ls output/kernel_sources-*.sfs* output/kbuild-*.sfs* output/*.tar* 2>/dev/null` small-output
       - name: Upload kernel
         uses: actions/upload-artifact@v2
         with:
