fix breakage of Firefox

--- a/woof-distro/x86_64/debian/bullseye64/_00build.conf
+++ b/woof-distro/x86_64/debian/bullseye64/_00build.conf
@@ -114,11 +114,11 @@ PROMPT='PS1="\w\$ "'
 ## Here add custom commands to be executed inside sandbox3/rootfs-complete
 EXTRA_COMMANDS="
 chroot . /usr/sbin/firewall_ng enable
-[ -d ../adrv ] && sed s~Exec=/usr/lib/firefox-esr/firefox-esr~Exec=firefox-esr~ -i ../adrv/usr/share/applications/firefox-esr.desktop || sed s~Exec=/usr/lib/firefox-esr/firefox-esr~Exec=firefox-esr~ -i usr/share/applications/firefox-esr.desktop
 [ -d ../adrv ] && touch usr/bin/firefox-esr
 chroot . /usr/sbin/setup-spot firefox-esr=true
-[ -d ../adrv ] && mv -f ../adrv/usr/bin/firefox-esr{,.bin}
-[ -d ../adrv ] && mv -f usr/bin/firefox-esr ../adrv/usr/bin/
+[ -d ../adrv ] && mv -f ../adrv/usr/lib/firefox-esr/firefox-esr{,.bin}
+[ -d ../adrv ] && mv -f usr/bin/firefox-esr ../adrv/usr/lib/firefox-esr/firefox-esr
+[ -d ../adrv ] && sed s~/usr/bin/firefox-esr~/usr/lib/firefox-esr/firefox-esr~ -i ../adrv/usr/lib/firefox-esr/firefox-esr
 [ -d ../adrv ] && rm -f usr/bin/firefox-esr.bin
 [ -d ../adrv ] && touch usr/bin/sylpheed
 chroot . /usr/sbin/setup-spot sylpheed=true
