--- a/woof-distro/x86_64/debian/sid64/_00build.conf
+++ b/woof-distro/x86_64/debian/sid64/_00build.conf
@@ -114,11 +114,11 @@ PROMPT='PS1="\w\$ "'
 ## Here add custom commands to be executed inside sandbox3/rootfs-complete
 EXTRA_COMMANDS="
 chroot . /usr/sbin/firewall_ng enable
-[ -d ../adrv ] && sed s~Exec=/usr/lib/firefox/firefox~Exec=firefox~ -i ../adrv/usr/share/applications/firefox.desktop || sed s~Exec=/usr/lib/firefox/firefox~Exec=firefox~ -i usr/share/applications/firefox.desktop
 [ -d ../adrv ] && touch usr/bin/firefox
 chroot . /usr/sbin/setup-spot firefox=true
-[ -d ../adrv ] && mv -f ../adrv/usr/bin/firefox{,.bin}
-[ -d ../adrv ] && mv -f usr/bin/firefox ../adrv/usr/bin/
+[ -d ../adrv ] && mv -f ../adrv/usr/lib/firefox/firefox{,.bin}
+[ -d ../adrv ] && mv -f usr/bin/firefox ../adrv/usr/lib/firefox/firefox
+[ -d ../adrv ] && sed s~/usr/bin/firefox~/usr/lib/firefox/firefox~ -i ../adrv/usr/lib/firefox/firefox
 [ -d ../adrv ] && rm -f usr/bin/firefox.bin
 [ -d ../adrv ] && touch usr/bin/transmission-gtk
 chroot . /usr/sbin/setup-spot transmission-gtk=true
