firmware_extra.sh expects bash as /bin/sh

--- a/.github/workflows/kernel-kit.yml
+++ b/.github/workflows/kernel-kit.yml
@@ -56,6 +56,8 @@ jobs:
           apt-get update -qq
           apt-get install -y --no-install-recommends curl wget ca-certificates git file squashfs-tools xz-utils diffutils patch make flex bison python3 bc bzip2 kmod rsync libelf-dev libssl-dev dwarves gcc ${{ matrix.deps }}
           curl https://raw.githubusercontent.com/puppylinux-woof-CE/initrd_progs/master/pkg/w_apps_static/w_apps/vercmp.c | gcc -x c -o /usr/local/bin/vercmp -
+          echo "dash dash/sh boolean false" | debconf-set-selections
+          DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
       - name: Build kernel
         run: |
           cd kernel-kit
