--- a/woof-distro/x86_64/debian/bookworm64/_00build.conf
+++ b/woof-distro/x86_64/debian/bookworm64/_00build.conf
@@ -167,6 +167,7 @@ rm -f usr/bin/weechat-headless
 rm -f etc/localtime
 ln -s /usr/share/zoneinfo/Etc/GMT-0 etc/localtime
 sed -i \"s/exec ppm/exec synaptic/\" usr/local/bin/missingdefaultapp
+[ \"\$DISTRO_VARIANT\" = \"dwl\" -o \"\$DISTRO_VARIANT\" = \"xwayland\" ] || touch var/local/xwin_run_as_spot
 [ \"\$DISTRO_VARIANT\" = \"dwl\" ] && rm -f etc/xdg/autostart/blueman.desktop
 [ \"\$DISTRO_VARIANT\" = \"dwl\" -o \"\$DISTRO_VARIANT\" = \"xwayland\" ] && rm -f etc/xdg/autostart/xinput-apply.desktop etc/xdg/autostart/xkb-apply.desktop etc/xdg/autostart/xorg-mousekeys.desktop
 "
