add gplaces petbuild

--- a/woof-distro/x86_64/debian/bullseye64/_00build.conf
+++ b/woof-distro/x86_64/debian/bullseye64/_00build.conf
@@ -55,6 +55,7 @@ PETBUILDS="busybox aaa_pup_c disktype dmz-cursor-theme geany gexec gtkdialog gtk
 PETBUILDS="$PETBUILDS abiword gnumeric xournalpp mpv gparted deadbeef gmeasures fpm2 xpad gtkhash gdmap ExpenseTracker grsync hardinfo uget gfnrename fsearch mtr"
 PETBUILDS="$PETBUILDS firewallstatus freememapplet jwm lxterminal pa-applet powerapplet_tray xdg-puppy-jwm connman-ui viewnior rox-filer epdfview"
 PETBUILDS="$PETBUILDS xlockmore"
+PETBUILDS="$PETBUILDS gplaces"
 
 ## GTK+ version to use when building packages that support GTK+ 2
 PETBUILD_GTK=3
@@ -129,6 +130,7 @@ chroot . /usr/sbin/setup-spot transmission-gtk=true
 chroot . /usr/sbin/setup-spot weechat=true
 chroot . /usr/sbin/setup-spot uget-gtk=true
 chroot . /usr/sbin/setup-spot putty=true
+chroot . /usr/sbin/setup-spot gplaces=true
 mv -f root/.spot-status root/.spot-status.orig
 chroot . /usr/sbin/setup-spot powerapplet_tray=true
 mv -f root/.spot-status.orig root/.spot-status
