--- a/woof-distro/x86_64/debian/sid64/_00build.conf
+++ b/woof-distro/x86_64/debian/sid64/_00build.conf
@@ -54,6 +54,7 @@ PETBUILDS="busybox aaa_pup_c disktype dmz-cursor-theme geany gexec gtkdialog gtk
 [ "$DISTRO_TARGETARCH" = "x86_64" ] && PETBUILDS="$PETBUILDS efilinux"
 PETBUILDS="$PETBUILDS abiword gnumeric xournalpp mpv gparted deadbeef gmeasures fpm2 xpad gtkhash gdmap ExpenseTracker grsync hardinfo uget gfnrename fsearch mtr"
 PETBUILDS="$PETBUILDS labwc swaylock wlopm xdg-puppy-labwc viewnior spacefm sfwbar lxterminal epdfview"
+PETBUILDS="$PETBUILDS gplaces"
 
 ## GTK+ version to use when building packages that support GTK+ 2
 PETBUILD_GTK=3
@@ -124,6 +125,7 @@ chroot . /usr/sbin/setup-spot transmission-gtk=true
 chroot . /usr/sbin/setup-spot weechat=true
 chroot . /usr/sbin/setup-spot uget-gtk=true
 chroot . /usr/sbin/setup-spot putty=true
+chroot . /usr/sbin/setup-spot gplaces=true
 mv -f root/.spot-status root/.spot-status.orig
 chroot . /usr/sbin/setup-spot powerapplet_tray=true
 mv -f root/.spot-status.orig root/.spot-status
