--- a/woof-distro/x86_64/debian/bookworm64/_00build.conf
+++ b/woof-distro/x86_64/debian/bookworm64/_00build.conf
@@ -67,6 +67,7 @@ else
 		PETBUILDS="$PETBUILDS xlockmore"
 	fi
 fi
+PETBUILDS="$PETBUILDS gplaces"
 
 ## GTK+ version to use when building packages that support GTK+ 2
 PETBUILD_GTK=3
@@ -142,6 +143,7 @@ chroot . /usr/sbin/setup-spot transmission-gtk=true
 chroot . /usr/sbin/setup-spot weechat=true
 chroot . /usr/sbin/setup-spot uget-gtk=true
 chroot . /usr/sbin/setup-spot putty=true
+chroot . /usr/sbin/setup-spot gplaces=true
 [ \"\$DISTRO_VARIANT\" != \"dwl\" ] && mv -f root/.spot-status root/.spot-status.orig
 [ \"\$DISTRO_VARIANT\" != \"dwl\" ] && chroot . /usr/sbin/setup-spot powerapplet_tray=true
 [ \"\$DISTRO_VARIANT\" != \"dwl\" ] && mv -f root/.spot-status.orig root/.spot-status
