--- a/woof-code/rootfs-skeleton/usr/share/applications/swaylock.desktop
+++ b/woof-code/rootfs-skeleton/usr/share/applications/swaylock.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Xlock
+Name=swaylock
 Icon=/usr/share/pixmaps/puppy/screen_lock.svg
 Comment=Lock screen
 Comment[fr]= Verrou d'écran
-Exec=puplock -locknow
+Exec=puplock
 Terminal=false
 Type=Application
 Categories=Security
