--- a/woof-code/rootfs-petbuilds/sfwbar/root/.config/sfwbar/extrabar.conf
+++ b/woof-code/rootfs-petbuilds/sfwbar/root/.config/sfwbar/extrabar.conf
@@ -1,14 +1,12 @@
 POS=top
 SIZE=36
 MON1=DVI-D-1
-inode-directory|defaultfilemanager|File manager
-terminal|defaultterminal|Terminal emulator
-gtk-execute|defaultprocessmanager|Process Viewer
-web-browser|defaultbrowser|defaultbrowser
-text-x-generic|defaulttexteditor|defaulttexteditor
-x-office-drawing|defaultpaint|defaultpaint
-spreadsheet|defaultspreadsheet|defaultspreadsheet
-document|defaultwordprocessor|defaultwordprocessor
-preferences-system|wizardwizard|Puppy Setup
-help|puppyhelp|Puppy Help
-gtk-quit|logout_gui|Leave Puppy
+inode-directory-symbolic|defaultfilemanager|File manager
+utilities-terminal-symbolic|defaultterminal|Terminal emulator
+application-x-executable-symbolic|defaultprocessmanager|Task manager
+web-browser-symbolic|defaultbrowser|Web browser
+text-editor-symbolic|defaulttexteditor|Text editor
+image-x-generic-symbolic|defaultimageeditor|defaultimageeditor
+x-office-spreadsheet-symbolic|defaultspreadsheet|Spreadsheet
+x-office-document-symbolic|defaultwordprocessor|Word processor
+application-exit-symbolic|logout_gui|Puppy Log Out
