--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,13 +164,14 @@ jobs:
         sudo mv petbuild-{sources,cache,output} $GITHUB_WORKSPACE/
     - name: Move build output
       run: |
-        for i in `ls ../woof-out_*/woof-output-*/*.{sfs,iso} 2>/dev/null`; do sudo mv -f $i .; done
+        for i in `ls ../woof-out_*/woof-output-*/*.img 2>/dev/null`; do gzip -1 $i .; done
+        for i in `ls ../woof-out_*/woof-output-*/*.{img.gz,iso} 2>/dev/null`; do sudo mv -f $i .; done
         sudo mv -f ../woof-out_*/kernel-kit/output/kernel_sources-*.sfs .
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: ${{ inputs.artifact }}
         path: |
-          *.iso
+          *.img.gz
           *.sfs
         retention-days: ${{ inputs.retention }}
