--- a/woof-code/rootfs-petbuilds/dwl-kiosk/root/.dwlinitrc
+++ b/woof-code/rootfs-petbuilds/dwl-kiosk/root/.dwlinitrc
@@ -36,6 +36,11 @@ fi
 gsettings set org.gnome.desktop.interface enable-animations false
 run-as-spot gsettings set org.gnome.desktop.interface enable-animations false
 
+gsettings set org.gnome.software download-updates false
+run-as-spot gsettings set org.gnome.software download-updates false
+gsettings set org.gnome.software download-updates-notify false
+run-as-spot gsettings set org.gnome.software download-updates-notify false
+
 # pass environment variables to D-Bus activated applications like Blueman
 dbus-update-activation-environment WAYLAND_DISPLAY DISPLAY
 run-as-spot dbus-update-activation-environment WAYLAND_DISPLAY DISPLAY
