remove gplaces from retro flavor

--- a/woof-distro/x86_64/debian/bookworm64/_00build.conf
+++ b/woof-distro/x86_64/debian/bookworm64/_00build.conf
@@ -73,7 +73,7 @@ else
 		PETBUILDS="$PETBUILDS connman-ui"
 	fi
 fi
-PETBUILDS="$PETBUILDS gplaces"
+[ "$DISTRO_VARIANT" != "retro" ] && PETBUILDS="$PETBUILDS gplaces"
 
 ## GTK+ version to use when building packages that support GTK+ 2
 PETBUILD_GTK=3
