add mdview petbuild

--- a/woof-code/rootfs-petbuilds/sfwbar/root/.config/sfwbar/extrabar.conf
+++ b/woof-code/rootfs-petbuilds/sfwbar/root/.config/sfwbar/extrabar.conf
@@ -9,4 +9,5 @@ text-editor-symbolic|defaulttexteditor|Text editor
 image-x-generic-symbolic|defaultimageeditor|defaultimageeditor
 x-office-spreadsheet-symbolic|defaultspreadsheet|Spreadsheet
 x-office-document-symbolic|defaultwordprocessor|Word processor
+help-contents-symbolic|puppyhelp|Puppy Help
 application-exit-symbolic|logout_gui|Puppy Log Out
