--- a/woof-distro/x86_64/debian/sid64/_00build.conf
+++ b/woof-distro/x86_64/debian/sid64/_00build.conf
@@ -50,10 +50,10 @@ USR_SYMLINKS=yes
 BUILD_BDRV=yes
 
 ## packages to build from source
-PETBUILDS="busybox aaa_pup_c dmz-cursor-theme gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish gxmessage lxtask mtpaint osmo xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy fixmenusd spot-pkexec notification-daemon-stub weechat"
+PETBUILDS="busybox aaa_pup_c dmz-cursor-theme gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish lxtask mtpaint osmo xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy fixmenusd spot-pkexec notification-daemon-stub weechat"
 [ "$DISTRO_TARGETARCH" = "x86_64" ] && PETBUILDS="$PETBUILDS efilinux"
 PETBUILDS="$PETBUILDS gparted deadbeef gmeasures xpad gdmap ExpenseTracker hardinfo gfnrename fsearch mdview"
-PETBUILDS="$PETBUILDS labwc swaylock swayidle chayang wlopm xdg-puppy-labwc viewnior spacefm sfwbar lxterminal-puppy epdfview"
+PETBUILDS="$PETBUILDS labwc swaylock swayidle chayang wlopm xdg-puppy-labwc spacefm sfwbar lxterminal-puppy epdfview"
 PETBUILDS="$PETBUILDS gplaces"
 
 ## GTK+ version to use when building packages that support GTK+ 2
