--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -53,7 +53,12 @@ BUILD_BDRV=yes
 PETBUILDS="busybox aaa_pup_c dmz-cursor-theme gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish lxtask mtpaint osmo xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy ram-saver fixmenusd spot-pkexec notification-daemon-stub weechat"
 [ "$DISTRO_TARGETARCH" = "x86_64" ] && PETBUILDS="$PETBUILDS efilinux"
 PETBUILDS="$PETBUILDS gparted deadbeef gmeasures xpad ExpenseTracker hardinfo gfnrename fsearch mdview"
-PETBUILDS="$PETBUILDS labwc swaylock swayidle chayang wlopm xdg-puppy-labwc spacefm sfwbar lxterminal-puppy epdfview"
+PETBUILDS="$PETBUILDS swaylock swayidle chayang spacefm epdfview"
+if [ "$DISTRO_VARIANT" = "dwl" ]; then
+    PETBUILDS="$PETBUILDS dwl foot-puppy yambar-dwl"
+else
+    PETBUILDS="$PETBUILDS labwc lxterminal-puppy sfwbar xdg-puppy-labwc"
+fi
 PETBUILDS="$PETBUILDS gplaces"
 
 ## GTK+ version to use when building packages that support GTK+ 2
