--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -19,7 +19,7 @@ FDRV_INC="non-free-firmware-pc"
 USR_SYMLINKS=yes
 
 ## packages to build from source
-PETBUILDS="busybox aaa_pup_c dmz-cursor-theme gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish lxtask mtpaint osmo xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy ram-saver fixmenusd spot-pkexec notification-daemon-stub weechat"
+PETBUILDS="busybox aaa_pup_c dmz-cursor-theme gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish lxtask mtpaint xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy ram-saver fixmenusd spot-pkexec notification-daemon-stub weechat"
 [ "$DISTRO_TARGETARCH" = "x86_64" ] && PETBUILDS="$PETBUILDS efilinux"
 PETBUILDS="$PETBUILDS gparted deadbeef gmeasures xpad ExpenseTracker hardinfo gfnrename fsearch mdview"
 PETBUILDS="$PETBUILDS swaylock swayidle chayang spacefm epdfview"
