--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -19,7 +19,7 @@ FDRV_INC="non-free-firmware-pc"
 USR_SYMLINKS=yes
 
 ## packages to build from source
-PETBUILDS="busybox aaa_pup_c dmz-cursor-theme gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish lxtask mtpaint xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy ram-saver fixmenusd spot-pkexec notification-daemon-stub weechat"
+PETBUILDS="busybox aaa_pup_c dmz-cursor-theme gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish lxtask mtpaint xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy ram-saver fixmenusd spot-pkexec notification-daemon-stub"
 [ "$DISTRO_TARGETARCH" = "x86_64" ] && PETBUILDS="$PETBUILDS efilinux"
 PETBUILDS="$PETBUILDS gparted deadbeef gmeasures xpad ExpenseTracker hardinfo gfnrename fsearch mdview"
 PETBUILDS="$PETBUILDS swaylock swayidle chayang spacefm epdfview"
@@ -47,13 +47,10 @@ chroot . /usr/sbin/firewall_ng enable
 chroot . /usr/sbin/setup-spot firefox=true
 chroot . /usr/sbin/setup-spot firefox-esr=true
 chroot . /usr/sbin/setup-spot transmission-gtk=true
-chroot . /usr/sbin/setup-spot weechat=true
 chroot . /usr/sbin/setup-spot putty=true
 ./usr/sbin/pup-advert-blocker start ./etc/hosts
 rm -f etc/fonts/conf.d/10-hinting-slight.conf etc/fonts/conf.d/10-autohint.conf
 ln -s /usr/share/fontconfig/conf.avail/10-hinting-none.conf etc/fonts/conf.d/
-chroot . run-as-spot weechat-headless -r \"/server add libera irc.libera.chat/6697 -autoconnect -ssl;/set irc.server.libera.autojoin #puppylinux;/quit\"
-rm -f usr/bin/weechat-headless
 echo \"kernel.yama.ptrace_scope = 1\" > etc/sysctl.d/10-ptrace.conf
 rm -f etc/xdg/autostart/blueman.desktop
 [ -e root/.config/sfwbar/includes.widget ] && sed -i 's/include(\"temp.widget\")/#&/' root/.config/sfwbar/includes.widget
