--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,23 +105,14 @@ jobs:
       run: |
         cd ../woof-out_*
         echo | sudo -E ./2createpackages
-    - name: Choose kernel variant
-      run: |
-        cd ../woof-out_*
-        . _00build.conf
-        [ ! -e _00build_2.conf ] || . _00build_2.conf
-        name="kernel-kit-output-usrmerge-${{ inputs.kernel }}-${{ inputs.arch }}"
-        [ "$USR_SYMLINKS" = yes ] || name="kernel-kit-output-${{ inputs.kernel }}-${{ inputs.arch }}"
-        echo "kernel_artifact=$name" >> $GITHUB_ENV
-      shell: bash
     - name: Get cached kernel-kit output
       uses: dawidd6/action-download-artifact@v2
       with:
-        repo: puppylinux-woof-CE/woof-CE
-        branch: testing
+        repo: vanilladpup/woof-CE
+        branch: vanilladpup-11.0.x
         workflow: ${{ startsWith(inputs.kernel, 'debian-') && 'dpup-kernel.yml' || (startsWith(inputs.kernel, 'ubuntu-') && 'upup-kernel.yml' || 'kernel-kit.yml') }}
         workflow_conclusion: success
-        name: ${{ env.kernel_artifact }}
+        name: kernel-kit-output-usrmerge-${{ inputs.kernel }}-${{ inputs.arch }}
         path: output
     - name: Move cached kernel-kit output
       run: sudo mv output ../woof-out_*/kernel-kit/
