--- a/.github/workflows/dpup-kernel.yml
+++ b/.github/workflows/dpup-kernel.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    if: github.event_name != 'schedule' || (github.repository == 'puppylinux-woof-CE/woof-CE' && github.ref == 'refs/heads/testing')
+    if: github.event_name != 'schedule' || (github.repository == 'vanilla-dpup/woof-CE' && github.ref == 'refs/heads/vanilladpup-11.0.x')
     runs-on: ubuntu-22.04
     container:
       image: debian:${{ matrix.release }}-slim
@@ -17,18 +17,6 @@ jobs:
     strategy:
       matrix:
         include:
-          - release: bullseye
-            arch: x86_64
-            base: config.amd64_none_amd64.xz
-          - release: bullseye
-            arch: x86
-            base: config.i386_none_686-pae.xz
-          - release: bookworm
-            arch: x86_64
-            base: config.amd64_none_amd64.xz
-          - release: bookworm
-            arch: x86
-            base: config.i386_none_686-pae.xz
           - release: trixie
             arch: x86_64
             base: config.amd64_none_amd64.xz
@@ -64,21 +52,18 @@ jobs:
           tar -c linux-$ver | xz -1 > sources/kernels/linux-$ver.tar.xz
           cd linux-$ver
           ./scripts/kconfig/merge_config.sh /tmp/base ../debian-diffconfigs/${{ matrix.release }}
-          mv -f .config ../configs_${{ matrix.arch }}/DOTconfig-$ver-${{ matrix.arch }}
+          mv -f .config ../DOTconfig-$ver-${{ matrix.arch }}
           apt-get autoremove -y linux-source
           cd ..
           rm -rf linux-$ver
           md5sum sources/kernels/linux-$ver.tar.xz | sed s~sources/kernels/~~ > sources/kernels/linux-$ver.tar.xz.md5.txt
-          echo "DOTconfig_file=configs_${{ matrix.arch }}/DOTconfig-$ver-${{ matrix.arch }}" >> build.conf
+          echo "DOTconfig_file=DOTconfig-$ver-${{ matrix.arch }}" >> build.conf
           echo "kernel_ver=$ver" >> build.conf
           echo "package_name_suffix=kernel-kit" >> build.conf
           echo "COMP=\"-comp zstd -Xcompression-level 19 -b 256K -no-exports -no-xattrs\"" >> build.conf
-          echo "fware=n" >> build.conf
           echo "AUTO=yes" >> build.conf
-          echo "AUFS=no" >> build.conf
           CREATE_KBUILD_SFS=yes ./build.sh
           rm -rf kernel_sources-*
-          ./usrmerge.sh
           mkdir small-output
           mv `ls output/kernel_sources-*.sfs* output/kbuild-*.sfs* output/*.tar* 2>/dev/null` small-output
           rm -rf output
