--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -23,7 +23,7 @@ PETBUILDS="$PETBUILDS swaylock swayidle chayang spacefm epdfview"
 if [ "$DISTRO_VARIANT" = "dwl" ]; then
     PETBUILDS="$PETBUILDS dwl foot-puppy yambar-dwl"
 else
-    PETBUILDS="$PETBUILDS labwc xdg-puppy-labwc lxterminal-puppy sfwbar xdg-puppy-sfwbar"
+    PETBUILDS="$PETBUILDS labwc-puppy xdg-puppy-labwc lxterminal-puppy sfwbar xdg-puppy-sfwbar"
 fi
 PETBUILDS="$PETBUILDS gplaces"
 
