--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,10 +75,6 @@ jobs:
         with:
           name: ${{ github.workflow }}-${{ github.event.inputs.arch }}-${{ github.event.inputs.compat-distro }}-${{ github.event.inputs.compat-distro-version }}-${{ github.run_number }}
           path: .
-      - name: Generate SHA512 checksums
-        run: |
-          find . -type f -name '*.sfs' -exec sha512sum {} \; > SHA512checksums.txt
-          find . -type f -name '*.img.gz' -exec sha512sum {} \; >> SHA512checksums.txt
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
@@ -88,6 +84,6 @@ jobs:
           files: |
             *.img.gz
             *.sfs
-            SHA512checksums.txt
+            woof-CE.tar.gz
           draft: true
           prerelease: false
