--- a/.github/workflows/dpup-kernel.yml
+++ b/.github/workflows/dpup-kernel.yml
@@ -9,67 +9,32 @@ jobs:
   build:
     if: github.event_name != 'schedule' || (github.repository == 'vanilla-dpup/woof-CE' && github.ref == 'refs/heads/vanilladpup-11.0.x')
     runs-on: ubuntu-22.04
-    container:
-      image: debian:${{ matrix.release }}-slim
-      volumes:
-        - /usr:/hostusr
     continue-on-error: ${{ matrix.release == 'sid' }}
     strategy:
       matrix:
         include:
           - release: trixie
             arch: x86_64
-            base: config.amd64_none_amd64.xz
           - release: sid
             arch: x86_64
-            base: config.amd64_none_amd64.xz
     steps:
       - uses: actions/checkout@v3
+      - name: Free space
+        run: sudo rm -rf /usr/local/lib/android /usr/share/dotnet # increase free space, we don't need these
       - name: Install dependencies
-        run: |
-          rm -rf /hostusr/local/lib/android /hostusr/share/dotnet # increase free space, we don't need these
-          [ ${{ matrix.release }} = sid ] || echo "deb http://deb.debian.org/debian ${{ matrix.release }} main contrib non-free" > /etc/apt/sources.list
-          [ ${{ matrix.release }} = sid ] || echo "deb http://deb.debian.org/debian ${{ matrix.release }}-updates main contrib non-free" >> /etc/apt/sources.list
-          [ ${{ matrix.release }} = sid ] || echo "deb http://deb.debian.org/debian-security ${{ matrix.release }}-security main contrib non-free" >> /etc/apt/sources.list
-          [ ${{ matrix.arch }} != x86 ] || dpkg --add-architecture i386
-          apt-get update -qq
-          apt-get upgrade -y
-          apt-get install -y --no-install-recommends curl wget ca-certificates git file squashfs-tools xz-utils diffutils patch make flex bison python3 bc bzip2 kmod rsync libelf-dev libssl-dev dwarves gcc jq
-          apt-get install -y linux-source
-          [ ${{ matrix.arch }} != x86 ] || apt-get install -y --no-install-recommends gcc-multilib `dpkg --get-selections | grep -m1 ^linux-config- | awk '{print $1}' | sed s/amd64/i386/`
-          curl https://raw.githubusercontent.com/puppylinux-woof-CE/initrd_progs/master/pkg/w_apps_static/w_apps/vercmp.c | gcc -x c -o /usr/local/bin/vercmp -
-          echo "dash dash/sh boolean false" | debconf-set-selections
-          DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
-      - name: Build kernel
-        run: |
-          cd kernel-kit
-          tar -xJf /usr/src/linux-source-*.tar.xz
-          cfg=`ls /usr/src/linux-config-*/${{ matrix.base }}`
-          xz -dc $cfg > /tmp/base
-          ver=`grep -Fm1 "Kernel Configuration" /tmp/base | cut -f 3 -d ' '`
-          mv -f linux-source-* linux-$ver
-          mkdir -p sources/kernels
-          tar -c linux-$ver | xz -9 > sources/kernels/linux-$ver.tar.xz
-          cd linux-$ver
-          ./scripts/kconfig/merge_config.sh /tmp/base ../debian-diffconfigs/${{ matrix.release }}
-          mv -f .config ../DOTconfig-$ver-${{ matrix.arch }}
-          apt-get autoremove -y linux-source
-          cd ..
-          rm -rf linux-$ver
-          md5sum sources/kernels/linux-$ver.tar.xz | sed s~sources/kernels/~~ > sources/kernels/linux-$ver.tar.xz.md5.txt
-          echo "DOTconfig_file=DOTconfig-$ver-${{ matrix.arch }}" >> build.conf
-          echo "kernel_ver=$ver" >> build.conf
-          echo "package_name_suffix=kernel-kit" >> build.conf
-          echo "COMP=\"-comp zstd -Xcompression-level 19 -b 256K -no-exports -no-xattrs\"" >> build.conf
-          echo "AUTO=yes" >> build.conf
-          CREATE_KBUILD_SFS=yes ./build.sh
-          rm -rf kernel_sources-*
-          mkdir small-output
-          mv `ls sources/kernels/linux-$ver.tar.xz DOTconfig-$ver-${{ matrix.arch }} build.conf output/kbuild-*.sfs* output/*.tar* 2>/dev/null` small-output
-          rm -rf output
+        run: sudo apt-get update -qq && sudo apt-get install -y --no-install-recommends debootstrap
+      - name: merge2out
+        timeout-minutes: 5
+        run: sudo -E ./merge2out woof-distro/${{ matrix.arch }}/debian/${{ matrix.release }}64
+      - name: 1download
+        run: cd ../woof-out_* && sudo -E ./1download
+      - name: 2buildkernel
+        run: cd ../woof-out_* && sudo -E ./2buildkernel
+      - name: Move build output
+        run: sudo mv ../woof-out_*/kernel-kit/output $GITHUB_WORKSPACE/
       - name: Upload kernel
         uses: actions/upload-artifact@v3
         with:
           name: kernel-kit-output-usrmerge-debian-${{ matrix.release }}-${{ matrix.arch }}
-          path: kernel-kit/small-output
+          path: output
           retention-days: 16
