document use of woof-CE to reproduce an image

--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -1,7 +1,7 @@
 #
 #  persistent configuration options
 #
-#  see also DISTRO_SPECS DISTRO_PET_REPOS DISTRO_COMPAT_REPOS-*
+#  see also DISTRO_SPECS
 #
 #  **NOTE**: check the original file every once in a while
 #            settings might be added or removed...
