replace sfwbar with waybar

--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -23,7 +23,7 @@ PETBUILDS="$PETBUILDS swaylock swayidle chayang spacefm epdfview"
 if [ "$DISTRO_VARIANT" = "dwl" ]; then
     PETBUILDS="$PETBUILDS dwl foot-puppy yambar-dwl"
 else
-    PETBUILDS="$PETBUILDS labwc-puppy xdg-puppy-labwc lxterminal-puppy sfwbar xdg-puppy-sfwbar"
+    PETBUILDS="$PETBUILDS labwc-puppy xdg-puppy-labwc lxterminal-puppy"
 fi
 PETBUILDS="$PETBUILDS gplaces"
 
@@ -43,19 +43,4 @@ EXTRA_COMMANDS="
 rm -f etc/fonts/conf.d/10-hinting-slight.conf etc/fonts/conf.d/10-autohint.conf
 ln -s /usr/share/fontconfig/conf.avail/10-hinting-none.conf etc/fonts/conf.d/
 echo \"kernel.yama.ptrace_scope = 1\" > etc/sysctl.d/10-ptrace.conf
-[ -e root/.config/sfwbar/includes.widget ] && sed -i 's/include(\"temp.widget\")/#&/' root/.config/sfwbar/includes.widget
-[ -e root/.config/sfwbar/includes.widget ] && sed -i 's/include(\"cpu.widget\")/#&/' root/.config/sfwbar/includes.widget
-[ -e root/.config/sfwbar/includes.widget ] && sed -i 's/include(\"idle.widget\")/#&/' root/.config/sfwbar/includes.widget
-[ -e root/.config/sfwbar/includes.widget ] && sed -i 's/include(\"logout.widget\")/#&/' root/.config/sfwbar/includes.widget
-[ -e root/.config/sfwbar/includes.widget ] && sed -i -e s/firewall/aaa/ -e s/pupusage/firewall/ -e s/aaa/pupusage/ root/.config/sfwbar/includes.widget
-[ -e root/.config/sfwbar/clock.widget ] && sed -i 's/timebar/defaultcalendar/' root/.config/sfwbar/clock.widget
-[ -e root/.config/sfwbar/clock.widget ] && sed -i 's/time bar/calendar/' root/.config/sfwbar/clock.widget
-[ -e root/.config/sfwbar/clock.widget ] && sed -i 's/Mono/Sans/' root/.config/sfwbar/clock.widget
-[ -e root/.config/sfwbar/clock.widget ] && sed -i 's/font-weight: 600; //' root/.config/sfwbar/clock.widget
-[ -e root/.config/sfwbar/clock.widget ] && sed -i 's/%k:%M %Z/%H:%M/' root/.config/sfwbar/clock.widget
-[ -e root/.config/sfwbar/clock.widget ] && sed -i 's/min-width: 80px; //' root/.config/sfwbar/clock.widget
-[ -e root/.config/sfwbar/network.widget ] && sed -i 's~pwifi~network-idle-symbolic~' root/.config/sfwbar/network.widget
-[ -e root/.config/sfwbar/network.widget ] && sed -i 's~pwired~network-idle-symbolic~' root/.config/sfwbar/network.widget
-[ -e root/.config/sfwbar/network.widget ] && sed -i 's~pcell~network-idle-symbolic~' root/.config/sfwbar/network.widget
-[ -e root/.config/sfwbar/network.widget ] && sed -i 's~pnot~network-offline-symbolic~' root/.config/sfwbar/network.widget
 "
