--- a/woof-code/rootfs-petbuilds/fixmenusd/etc/xdg/autostart/fixmenusd.desktop
+++ b/woof-code/rootfs-petbuilds/fixmenusd/etc/xdg/autostart/fixmenusd.desktop
@@ -2,6 +2,6 @@
 Version=1.0
 Name=fixmenusd
 Comment=fixmenus daemon
-Exec=fixmenusd "fixmenus; killall -HUP labwc sfwbar"
+Exec=fixmenusd "fixmenus; killall -HUP labwc"
 Terminal=false
 Type=Application
