add yad-based timezone change tool

--- a/woof-code/rootfs-skeleton/usr/share/applications/libinput-config.desktop
+++ b/woof-code/rootfs-skeleton/usr/share/applications/libinput-config.desktop
@@ -1,8 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=libinput-config
+Name=Pointer Settings
 Icon=input-mouse-symbolic
-Comment=Pointer device settings
 Exec=libinput-config
 Terminal=false
 Type=Application
