--- a/woof-code/rootfs-petbuilds/swayidle/usr/share/applications/swayidle-config.desktop
+++ b/woof-code/rootfs-petbuilds/swayidle/usr/share/applications/swayidle-config.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=swayidle-config
+Name=Screensaver Settings
 Icon=user-idle-symbolic
 Comment=Configure swayidle
 Exec=swayidle-config
