speed up ad blocking using binary search on hashes

--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -8,7 +8,7 @@
 #
 
 ## packages to build from source
-PETBUILDS="aaa_pup_c gexec gtkdialog Xdialog yad connman-puppy ram-saver fixmenusd spot-pkexec swaylock swayidle chayang spacefm mdview"
+PETBUILDS="aaa_pup_c gexec gtkdialog Xdialog yad connman-puppy ram-saver fixmenusd spot-pkexec swaylock swayidle chayang spacefm mdview pup_advert_blocker"
 [ "$DISTRO_TARGETARCH" = "x86_64" ] && PETBUILDS="$PETBUILDS efilinux"
 if [ "$DISTRO_VARIANT" = "dwl" ]; then
     PETBUILDS="$PETBUILDS dwl foot-puppy yambar-dwl"
