unify {mtpaint,slurp}-screenshot

--- a/woof-code/rootfs-petbuilds/mtpaint/usr/share/applications/mtpaint-screenshot.desktop
+++ b/woof-code/rootfs-petbuilds/mtpaint/usr/share/applications/mtpaint-screenshot.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Screenshot
+Icon=camera-photo-symbolic
 Exec=mtpaint-screenshot
 Terminal=false
 Type=Application
