Reapply "drop geany petbuild"
This reverts commit a31f41e10d7c436a904ddda90e0c991bc1a75227.

--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -15,7 +15,7 @@ if [ "$DISTRO_VARIANT" = "dwl" ]; then
 else
     PETBUILDS="$PETBUILDS labwc-puppy xdg-puppy-labwc lxterminal-puppy"
 fi
-[ "$DISTRO_VARIANT" != "barebones" ] && PETBUILDS="$PETBUILDS notification-daemon-stub geany mtpaint epdfview deadbeef gmeasures fpm2 xpad ExpenseTracker hardinfo gfnrename fsearch wly-colpick gplaces"
+[ "$DISTRO_VARIANT" != "barebones" ] && PETBUILDS="$PETBUILDS notification-daemon-stub mtpaint epdfview deadbeef gmeasures fpm2 xpad ExpenseTracker hardinfo gfnrename fsearch wly-colpick gplaces"
 
 ## compression method to be used (SFS files)
 #SFSCOMP='-comp xz -Xbcj x86 -b 512K'
