--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -18,8 +18,4 @@ fi
 [ "$DISTRO_VARIANT" != "barebones" ] && PETBUILDS="$PETBUILDS notification-daemon-stub mtpaint epdfview deadbeef gmeasures fpm2 xpad ExpenseTracker hardinfo gfnrename fsearch wly-colpick gplaces"
 
 ## compression method to be used (SFS files)
-#SFSCOMP='-comp xz -Xbcj x86 -b 512K'
-#SFSCOMP='-comp xz -Xbcj arm,armthumb -b 512K'
-#SFSCOMP='-comp gzip'
-#SFSCOMP='-noI -noD -noF -noX'
-SFSCOMP='-comp zstd -Xcompression-level 19 -b 256K -no-exports -no-xattrs'
+SFSCOMP='-x0 -zlz4hc,12 -C262144'
