use zstd to compress SFSs

--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -18,4 +18,4 @@ fi
 [ "$DISTRO_VARIANT" != "barebones" ] && PETBUILDS="$PETBUILDS notification-daemon-stub mtpaint epdfview deadbeef gmeasures fpm2 xpad ExpenseTracker hardinfo gfnrename fsearch wly-colpick gplaces"
 
 ## compression method to be used (SFS files)
-SFSCOMP='-x0 -zlz4hc,12 -C262144'
+SFSCOMP='-x0 -zzstd,19 -C262144'
